feat(test/ConfigurationTest): test config-load without a header, and change the directory for testing-related outputs